CEDAR Resource validation refact - refs #25094